--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.1.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "sweetalert2": "^11.10.7",
     "sweetalert2-react-content": "^5.0.7"
   },
